<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#566573"> <!--El uso de Background Color en el archivo colors daba inconvenientes-->

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro"
            android:textSize="24sp"
            android:textColor="@color/primary_color" />

        <EditText
            android:id="@+id/mailtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:layout_marginTop="16dp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/pwdtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:backgroundTint="@color/secondary_color"
            android:textColor="@color/text_color"
            android:layout_marginTop="24dp" />
        <Button
            android:id="@+id/btnregis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:backgroundTint="@color/secondary_color"
            android:textColor="@color/text_color"
            android:layout_marginTop="24dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>