<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#566573"> <!--El uso de Background Color en el archivo colors daba inconvenientes-->

        <!-- Lista de medicamentos seleccionados -->
        <TextView
            android:id="@+id/tvOrderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_order"
            android:textSize="24sp"
            android:textColor="@color/primary_color" />

        <ListView
            android:id="@+id/lvOrderItems"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp"/>

        <!-- Total -->
        <TextView
            android:id="@+id/tvTotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_order"
            android:textColor="@color/primary_color"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tvTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$0.00"
            android:textSize="20sp"
            android:textColor="@color/secondary_color"
            android:layout_marginTop="8dp"/>

        <Button android:id="@+id/btnSelectMedicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_medicine"
            android:backgroundTint="@color/primary_color"
            android:textColor="@color/text_color" />

        <Button android:id="@+id/btnViewSales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_ventas"
            android:backgroundTint="@color/primary_color"
            android:textColor="@color/text_color" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>